[package]
name = "egui_former_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
[dependencies]
darling = "0.20.0"
proc-macro2 = "1.0.56"
quote = "1.0.26"
heck = "0.4.1"
egui = "0.21"
# [dev-dependencies]
